# agentic-ai-career-launch-agent

./: .gitignore  README.md  logs.txt  main.py  pyproject.toml  sanity_check.ipynb  test_ollama.py
Documents/: failure-report.md
api/: app.py
docx/: architecture.md  system-card.md
embeddings/: chroma.sqlite3  embeddings.ipynb  main.py
evaluation/: ragas_eval.py  results.json  run_tests.py
langgraph-workflow/: graph.py  langgraph.ipynb  main.py  nodes.py  state.py
rag_agent/: main.py  rag_agent.ipynb  schema.py
security/: adversarial_tests.py  attack_prompts.py  checklist.md  input_guard.py  output_guard.py  permissions.py  review_gate.py  safety_logs.md  topic_guard.py
smolagents_project/: agent.py  comparison_notes.ipynb
tests/: golden_cases.json  test_citations.py  test_empty_input.py  test_prompt_injection.py  test_safety.py  test_schema.py
tool_calling/: app.py  logs.txt  parser.py  prompts.py  tools.py
vectordb/: main.py
