[project]
name = "career-launch-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "huggingface-hub>=1.14.0",
    "jupyterlab>=4.5.7",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "litellm>=1.85.0",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pypdf>=6.12.0",
    "pytest>=9.0.3",
    "ragas>=0.4.3",
    "requests>=2.34.1",
    "sentence-transformers>=5.5.0",
    "smolagents>=1.25.0",
    "torch>=2.10.0",
    "transformers>=5.8.1",
]
